@@ -10,7 +10,6 @@ icons_DATA =				\
 	dialog-error.png		\
 	dialog-information.png		\
 	dialog-warning.png		\
-	weather-clear-night.png		\
 	weather-few-clouds.png		\
 	weather-few-clouds-night.png	\
 	weather-fog.png			\
