@@ -7,11 +7,14 @@ iconsdir = $(themedir)/$(size)/$(context)
 icons_DATA =			\
 	folder-drag-accept.icon	\
 	folder-drag-accept.svg	\
+	folder-open.icon	\
+	folder-open.svg		\
 	folder-visiting.icon	\
 	folder-visiting.svg	\
-	image-loading.svg		\
+	image-loading.svg	\
 	user-trash-full.svg	\
-	weather-clear.svg
+	weather-clear.svg	\
+	weather-clear-night.svg
 
 EXTRA_DIST =		\
 	$(icons_DATA)
