@@ -1,3 +1,12 @@
+2006-04-07  Rodney Dawes  <dobey@novell.com>
+
+	* 48x48/status/Makefile.am:
+	* 48x48/status/weather-clear-night.png: Replaced with updated version
+	in the Scalable size
+
+	* scalable/status/Makefile.am: Add weather-clear-night.svg and the
+	folder-open.icon and folder-open.svg files
+
 2006-04-07  Jakub Steiner <jimmac@ximian.com>
 
 	* weather-clear-night: "... not because it's easy, but because it is
